--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "gatsby": "^2.21.22",
     "gatsby-image": "^2.4.3",
     "gatsby-plugin-manifest": "^2.4.2",
@@ -21,6 +22,7 @@
     "react-helmet": "^6.0.0"
   },
   "devDependencies": {
+    "faker": "^4.1.0",
     "prettier": "2.0.5"
   },
   "keywords": [
